# scn

./: .cursorrules  .gitignore  LINUX_BUILD.md  PROJECT_STRUCTURE.md  PULL_REQUEST.md  PULL_REQUEST_REMOTE_DESKTOP.md  PULL_REQUEST_REMOTE_DESKTOP_PR2.md  PULL_REQUEST_REMOTE_DESKTOP_PR3.md  PULL_REQUEST_REMOTE_DESKTOP_PR4.md  README.md  TRANSPORT_BUILD.md  add-linux-support.sh  build-linux-final.sh  build-wsl.sh  build.ps1  build.sh  generate_icon.ps1  pack-transport.ps1  run-linux-build.sh  setup-wsl.sh
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scn/: .flutter-plugins  .metadata  README.md  pubspec.yaml  test-mode.ps1
scn-release/: README.txt
scn-release/data/flutter_assets/: NOTICES.Z
scn/docs/: wan_p2p.md
scn/lib/: main.dart
scn/lib/models/: chat_message.dart  device.dart  device_visibility.dart  file_info.dart  multicast_dto.dart  remote_desktop_models.dart  remote_file_models.dart  remote_peer.dart  session.dart  signaling_models.dart
scn/lib/pages/: home_page.dart  remote_desktop_page.dart  remote_desktop_viewer_page.dart  remote_file_manager_page.dart  vpn_page.dart
scn/lib/pages/tabs/: chat_tab.dart  receive_tab.dart  send_tab.dart  settings_tab.dart
scn/lib/providers/: chat_provider.dart  device_provider.dart  receive_provider.dart  remote_peer_provider.dart  send_provider.dart
scn/lib/services/: app_service.dart  desktop_integration_service.dart  discovery_service.dart  embedded_signaling_server_service.dart  file_service.dart  http_client_service.dart  http_server_service.dart  internet_transport_planner.dart  mesh_network_service.dart  network_diagnostics_service.dart  obfuscation_service.dart  peer_discovery_service.dart  secure_channel_service.dart  signaling_service.dart  stun_service.dart  update_service.dart  webrtc_transport_service.dart
scn/lib/services/remote_desktop/: host_window_manager.dart  rd_keyboard_grab.dart  relay_endpoints.dart  relay_selector.dart  remote_desktop_client_service.dart  remote_desktop_host_service.dart  remote_desktop_protocol.dart  remote_desktop_relay_service.dart  remote_file_client_service.dart  remote_file_host_service.dart  secure_desktop_override.dart
scn/lib/services/remote_desktop/input_injector/: input_injector.dart  input_injector_linux.dart  input_injector_macos.dart  input_injector_native.dart  input_injector_stub.dart  input_injector_windows.dart  input_service_manager.dart  service_input_bridge.dart  win_keymap.dart
scn/lib/utils/: device_name_generator.dart  file_opener.dart  logger.dart  process_manager.dart  rd_test_env.dart  test_config.dart  test_storage.dart  win7_platform.dart  win7_rd_capture.dart  win7_webrtc.dart
scn/lib/widgets/: add_peer_dialog.dart  invitation_card.dart  peer_tile.dart  remote_desktop_permission_dialog.dart  remote_desktop_permission_listener.dart  scn_logo.dart  win7_boot_gate.dart  win7_remote_desktop_stub.dart
scn/linux/: CMakeLists.txt
scn/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
scn/linux/runner/: my_application.cc
scn/test/: widget_test.dart
scn/windows/: CMakeLists.txt
scn/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
scn/windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  main.cpp  rd_input_service.cpp  rd_input_service.h  runner.exe.manifest  scn_plugin_registrant.cpp  win32_window.cpp  win7_crash_log.cpp  win7_crash_log.h  win7_delayload.cpp  win7_env.cpp  win7_env.h  win7_flutter_diag.cpp  win7_flutter_diag.h  win7_iat_patch.cpp  win7_iat_patch.h  win7_iat_redirect.cpp  win7_iat_redirect.h  win7_mesh_channel.cpp  win7_mesh_channel.h  win7_mesh_signal.cpp  win7_mesh_signal.h  win7_prereq.cpp  win7_prereq.h  win7_rd_capture.cpp  win7_rd_capture.h  win7_rd_channel.cpp  win7_rd_channel.h  win7_webrtc_enable.cpp  win7_webrtc_enable.h
scn/windows/win7_shim/: CMakeLists.txt  core_path_shim.cpp  core_path_shim.def  d3d11_shim.cpp  d3d11_shim.def  dxgi_shim.cpp  dxgi_shim.def  gen_proxy_shim_def.py  gen_ws2_shim_def.py  getprocaddress_hook.cpp  gpa_redirect.cpp  inject_flutter_tls.py  kernel32_shim.cpp  kernel32_shim.def  ntdll_shim.cpp  ntdll_shim.def  patch_flutter_win7.py  patch_win7_pe.py  repair_lief_imports.py  shcore_scaling_shim.cpp  shcore_scaling_shim.def  win7_shim_common.h  ws2_hostname_shim.cpp  ws2_hostname_shim.def
server/scn-relay/: .gitignore  package-lock.json  package.json  publish-update.ps1  server.js
server/scn-relay/deploy/: README.md  install-ru.sh  scn-relay.service
server/scn-relay/updates/: README.md  update.json
